--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --watch --coverage",
     "start:server": "json-server --watch db.json"
   },
   "private": true,
@@ -33,14 +33,11 @@
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "jest-marbles": "^3.0.3",
+    "jest-preset-angular": "^13.1.1",
     "json-server": "^0.17.3",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
   }
 }
